added analysis of 2nd and 3rd datasets for -801

--- a/DarkAnalysis.ipynb
+++ b/DarkAnalysis.ipynb
@@ -901,7 +901,619 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 83F011167"
+    "# 83F010801 Round 2: -10C (2015-12-17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "b1 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_16_bias.fits')\n",
+    "b2 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_17_bias.fits')\n",
+    "b3 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_18_bias.fits')\n",
+    "b4 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_19_bias.fits')\n",
+    "b5 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_20_bias.fits')\n",
+    "b6 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_21_bias.fits')\n",
+    "b7 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_22_bias.fits')\n",
+    "b8 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_23_bias.fits')\n",
+    "b9 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_22_bias.fits')\n",
+    "b10 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_23_bias.fits')\n",
+    "\n",
+    "btot = b1[0].data+b2[0].data+b3[0].data+b4[0].data+b5[0].data+b6[0].data+b7[0].data+b8[0].data+b9[0].data+b10[0].data\n",
+    "bias = (btot[:,:]/10.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(765.68988, 708.09998, 2011.6)"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bias.mean(), bias.min(), bias.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d1 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_1_dark.fits')\n",
+    "d2 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_2_dark.fits')\n",
+    "d3 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_3_dark.fits')\n",
+    "d4 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_4_dark.fits')\n",
+    "d5 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_5_dark.fits')\n",
+    "d6 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_6_dark.fits')\n",
+    "d7 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_7_dark.fits')\n",
+    "d8 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_8_dark.fits')\n",
+    "d9 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_9_dark.fits')\n",
+    "d10 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_10_dark.fits')\n",
+    "d11 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_11_dark.fits')\n",
+    "d12 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_12_dark.fits')\n",
+    "d13 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_13_dark.fits')\n",
+    "d14 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_14_dark.fits')\n",
+    "d15 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-10C/83F010801_15_dark.fits')\n",
+    "\n",
+    "dark1=d1[0].data\n",
+    "dark2=d2[0].data\n",
+    "dark3=d3[0].data\n",
+    "dark4=d4[0].data\n",
+    "dark5=d5[0].data\n",
+    "dark6=d6[0].data\n",
+    "dark7=d7[0].data\n",
+    "dark8=d8[0].data\n",
+    "dark9=d9[0].data\n",
+    "dark10=d10[0].data\n",
+    "dark11=d11[0].data\n",
+    "dark12=d12[0].data\n",
+    "dark13=d13[0].data\n",
+    "dark14=d14[0].data\n",
+    "dark15=d15[0].data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bias Temperatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-9.79, -10.2, -9.79, -10.2, -10.2, -9.79, -9.79, -9.79, -9.79, -9.79)"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1[0].header['TEMPERAT'], b2[0].header['TEMPERAT'], b3[0].header['TEMPERAT'], b4[0].header['TEMPERAT'], b5[0].header['TEMPERAT'],b6[0].header['TEMPERAT'], b7[0].header['TEMPERAT'], b8[0].header['TEMPERAT'], b7[0].header['TEMPERAT'], b8[0].header['TEMPERAT']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dark Temperatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-9.79,\n",
+       " -9.79,\n",
+       " -10.2,\n",
+       " -9.79,\n",
+       " -9.79,\n",
+       " -9.79,\n",
+       " -9.79,\n",
+       " -9.79,\n",
+       " -10.2,\n",
+       " -9.79,\n",
+       " -10.2,\n",
+       " -9.79,\n",
+       " -9.79,\n",
+       " -10.2,\n",
+       " -10.2)"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1[0].header['TEMPERAT'], d2[0].header['TEMPERAT'], d3[0].header['TEMPERAT'], d4[0].header['TEMPERAT'], d5[0].header['TEMPERAT'],d6[0].header['TEMPERAT'], d7[0].header['TEMPERAT'], d8[0].header['TEMPERAT'], d9[0].header['TEMPERAT'], d10[0].header['TEMPERAT'], d11[0].header['TEMPERAT'] , d12[0].header['TEMPERAT'], d13[0].header['TEMPERAT'], d14[0].header['TEMPERAT'], d14[0].header['TEMPERAT']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Individual Bias Means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(760.98126,\n",
+       " 763.21173,\n",
+       " 764.30292,\n",
+       " 765.40918,\n",
+       " 765.73462,\n",
+       " 766.49719,\n",
+       " 767.10834,\n",
+       " 768.27399,\n",
+       " 767.10834,\n",
+       " 768.27399)"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1[0].data.mean(), b2[0].data.mean(), b3[0].data.mean(), b4[0].data.mean(), b5[0].data.mean(), b6[0].data.mean(), b7[0].data.mean(), b8[0].data.mean(), b7[0].data.mean(), b8[0].data.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Individual Dark Means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(729.80286,\n",
+       " 734.47571,\n",
+       " 736.95618,\n",
+       " 740.05963,\n",
+       " 739.57452,\n",
+       " 737.52722,\n",
+       " 734.81824,\n",
+       " 732.43341,\n",
+       " 728.47107,\n",
+       " 728.61731,\n",
+       " 731.07648,\n",
+       " 732.43445,\n",
+       " 728.77686,\n",
+       " 725.94135,\n",
+       " 724.70599)"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dark1.mean(), dark2.mean(), dark3.mean(), dark4.mean(), dark5.mean(), dark6.mean(), dark7.mean(), dark8.mean(), dark9.mean(), dark10.mean(), dark11.mean(), dark12.mean(), dark13.mean(), dark14.mean(), dark15.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2532, 3352)"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dark_stack=np.array([dark1, dark2, dark3, dark4, dark5, dark6, dark7, dark8, dark9, dark10, dark11, dark12, dark13, dark14, dark15])\n",
+    "dark_med = np.median(dark_stack, 0) \n",
+    "dark_med.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(732.2113, -33.478493)"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dark_med_biased=dark_med-bias\n",
+    "dark_med.mean(), dark_med_biased.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "darkmedbiased=fits.PrimaryHDU(dark_med_biased)\n",
+    "darkmedbiased.writeto('83F010801_dark_med_biased.fits')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 83F010801 Round 3: -5C (2015-12-17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "b1 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_41_bias.fits')\n",
+    "b2 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_42_bias.fits')\n",
+    "b3 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_43_bias.fits')\n",
+    "b4 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_44_bias.fits')\n",
+    "b5 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_45_bias.fits')\n",
+    "b6 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_46_bias.fits')\n",
+    "b7 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_47_bias.fits')\n",
+    "b8 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_48_bias.fits')\n",
+    "b9 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_49_bias.fits')\n",
+    "b10 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_50_bias.fits')\n",
+    "\n",
+    "\n",
+    "btot = b1[0].data+b2[0].data+b3[0].data+b4[0].data+b5[0].data+b6[0].data+b7[0].data+b8[0].data+b9[0].data+b10[0].data\n",
+    "bias = (btot[:,:]/10.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(764.47723, 713.5, 2452.5)"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bias.mean(), bias.min(), bias.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d1 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_26_dark.fits')\n",
+    "d2 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_27_dark.fits')\n",
+    "d3 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_28_dark.fits')\n",
+    "d4 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_29_dark.fits')\n",
+    "d5 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_30_dark.fits')\n",
+    "d6 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_31_dark.fits')\n",
+    "d7 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_32_dark.fits')\n",
+    "d8 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_33_dark.fits')\n",
+    "d9 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_34_dark.fits')\n",
+    "d10 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_35_dark.fits')\n",
+    "d11 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_36_dark.fits')\n",
+    "d12 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_37_dark.fits')\n",
+    "d13 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_38_dark.fits')\n",
+    "d14 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_39_dark.fits')\n",
+    "d15 = fits.open('/Volumes/LaCie/Huntsman/HuntsmanTelephotoArray/raw/83F010801/2015-12-17/-5C/83F010801_40_dark.fits')\n",
+    "\n",
+    "\n",
+    "dark1=d1[0].data\n",
+    "dark2=d2[0].data\n",
+    "dark3=d3[0].data\n",
+    "dark4=d4[0].data\n",
+    "dark5=d5[0].data\n",
+    "dark6=d6[0].data\n",
+    "dark7=d7[0].data\n",
+    "dark8=d8[0].data\n",
+    "dark9=d9[0].data\n",
+    "dark10=d10[0].data\n",
+    "dark11=d11[0].data\n",
+    "dark12=d12[0].data\n",
+    "dark13=d13[0].data\n",
+    "dark14=d14[0].data\n",
+    "dark15=d15[0].data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bias Temperatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-4.82, -4.82, -5.23, -4.82, -4.82, -5.23, -4.82, -5.23, -4.82, -5.23)"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1[0].header['TEMPERAT'], b2[0].header['TEMPERAT'], b3[0].header['TEMPERAT'], b4[0].header['TEMPERAT'], b5[0].header['TEMPERAT'],b6[0].header['TEMPERAT'], b7[0].header['TEMPERAT'], b8[0].header['TEMPERAT'], b7[0].header['TEMPERAT'], b8[0].header['TEMPERAT']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dark Temperatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-5.23,\n",
+       " -5.23,\n",
+       " -5.23,\n",
+       " -5.23,\n",
+       " -4.82,\n",
+       " -4.82,\n",
+       " -5.23,\n",
+       " -5.23,\n",
+       " -4.82,\n",
+       " -4.82,\n",
+       " -4.82,\n",
+       " -5.23,\n",
+       " -5.23,\n",
+       " -4.82,\n",
+       " -4.82)"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1[0].header['TEMPERAT'], d2[0].header['TEMPERAT'], d3[0].header['TEMPERAT'], d4[0].header['TEMPERAT'], d5[0].header['TEMPERAT'],d6[0].header['TEMPERAT'], d7[0].header['TEMPERAT'], d8[0].header['TEMPERAT'], d9[0].header['TEMPERAT'], d10[0].header['TEMPERAT'], d11[0].header['TEMPERAT'] , d12[0].header['TEMPERAT'], d13[0].header['TEMPERAT'], d14[0].header['TEMPERAT'], d14[0].header['TEMPERAT']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Individual Bias Means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(760.69171,\n",
+       " 761.8454,\n",
+       " 762.97156,\n",
+       " 763.95245,\n",
+       " 765.07867,\n",
+       " 765.53864,\n",
+       " 765.75641,\n",
+       " 766.00146,\n",
+       " 765.75641,\n",
+       " 766.00146)"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1[0].data.mean(), b2[0].data.mean(), b3[0].data.mean(), b4[0].data.mean(), b5[0].data.mean(), b6[0].data.mean(), b7[0].data.mean(), b8[0].data.mean(), b7[0].data.mean(), b8[0].data.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Individual Dark Means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(699.1131,\n",
+       " 688.07788,\n",
+       " 695.46814,\n",
+       " 706.65271,\n",
+       " 714.49811,\n",
+       " 718.39386,\n",
+       " 721.02679,\n",
+       " 723.51617,\n",
+       " 723.49805,\n",
+       " 726.13123,\n",
+       " 726.71088,\n",
+       " 727.18298,\n",
+       " 727.237,\n",
+       " 727.98834,\n",
+       " 728.40344)"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dark1.mean(), dark2.mean(), dark3.mean(), dark4.mean(), dark5.mean(), dark6.mean(), dark7.mean(), dark8.mean(), dark9.mean(), dark10.mean(), dark11.mean(), dark12.mean(), dark13.mean(), dark14.mean(), dark15.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2532, 3352)"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dark_stack=np.array([dark1, dark2, dark3, dark4, dark5, dark6, dark7, dark8, dark9, dark10, dark11, dark12, dark13, dark14, dark15])\n",
+    "dark_med = np.median(dark_stack, 0) \n",
+    "dark_med.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(717.24188, -47.234875)"
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dark_med_biased=dark_med-bias\n",
+    "dark_med.mean(), dark_med_biased.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "darkmedbiased=fits.PrimaryHDU(dark_med_biased)\n",
+    "darkmedbiased.writeto('83F010801_dark_med_biased.fits')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 83F011167"
    ]
   },
   {
